Report the name of the faulty file when there is an XML parsing error. Useful for popup windows or XUL files. b=47416 r=heikki sr=jst